Creación de Producto

--- a/LibreriaFlow/Web.config
+++ b/LibreriaFlow/Web.config
@@ -61,7 +61,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DCUEntities" connectionString="metadata=res://*/Models.LibreriaModel.csdl|res://*/Models.LibreriaModel.ssdl|res://*/Models.LibreriaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DCU;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DCUEntities" connectionString="metadata=res://*/Models.DCUEntities.csdl|res://*/Models.DCUEntities.ssdl|res://*/Models.DCUEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DCU;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProductoEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DCU;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
